# micifuz

./: .gitignore  README.md  WORKSPACE  checkstyle.xml  deps.bzl  eclipse-format.xml  maven.bzl  pom.xml  settings.gradle
.github/: dependabot.yml
.github/workflows/: ci.yml  daily.yaml
backend/: pom.xml
backend/authn/: BUILD.bazel  pom.xml
backend/authn/src/main/java/com/gutmox/handlers/: HealthHandler.java  HelloHandler.java
backend/authn/src/main/java/com/micifuz/authn/: Application.java  AuthMainVerticle.java  Main.java  MainVerticle.java  Producers.java
backend/authn/src/main/java/com/micifuz/authn/configuration/: ConfigManager.java
backend/authn/src/main/java/com/micifuz/authn/handlers/: CheckBasicAuthHandler.java  FailureHandler.java  HealthCheck.java  HealthChecks.java  HealthHandler.java  HelloHandler.java  LivenessHealthChecks.java  OauthHandler.java  ReadinessHealthChecks.java  UsersHandler.java
backend/authn/src/main/java/com/micifuz/authn/healthChecks/: Procedures.java
backend/authn/src/main/java/com/micifuz/authn/ioc/: IoC.java
backend/authn/src/main/java/com/micifuz/authn/model/: Credentials.java  Users.java
backend/authn/src/main/java/com/micifuz/authn/router/: Routing.java
backend/authn/src/main/java/com/micifuz/authn/services/: KeycloakService.java
backend/authn/src/main/java/com/micifuz/authn/utils/: RealmUtils.java
backend/authn/src/main/resources/: application.properties  keycloak-example-realm.json
backend/authn/src/test/java/com/gutmox/: SimpleTest.java
backend/authn/src/test/java/com/micifuz/authn/: HealthCheckTest.java  OauthHandlerTest.java  RootPathTest.java  ServiceAuthTest.java  SimpleTest.java  UserHandlerTest.java
backend/authn/src/test/java/com/micifuz/test/authn/: HealthCheckTest.java  OauthHandlerTest.java  RootPathTest.java  UserHandlerTest.java
backend/authn/src/test/resources/: expired_accesstoken.json  keycloak-example-realm.json  simple.yaml
backend/authn/src/test/resources/realms/: keycloak-petshop-realm.json  keycloak-shelters-realm.json  keycloak-vets-realm.json
backend/commons/: BUILD.bazel  pom.xml
backend/commons/src/main/java/com/micifuz/commons/: JwtAuthOptions.java  RouteHelper.java  Runner.java  RxRouteHelper.java  package-info.java
backend/commons/src/main/java/com/micifuz/commons/configuration/: ConfigManager.java
backend/commons/src/main/java/com/micifuz/commons/handlers/: CheckBasicAuthHandler.java  MustContainsRoles.java  Redirections.java  RequiresAuthorizationHeader.java
backend/commons/src/main/java/com/micifuz/commons/handlers/impl/: CheckBasicAuthHandlerImpl.java  MustContainsRolesImpl.java  RequiresAuthorizationHeaderImpl.java
backend/commons/src/main/java/com/micifuz/commons/reponses/: Redirections.java
backend/commons/src/main/resources/: config.yaml
backend/petshop/: BUILD.bazel  pom.xml
backend/petshop/src/main/java/com/micifuz/petshop/: Main.java  MainVerticle.java  PetShopMainVerticle.java
backend/petshop/src/main/java/com/micifuz/petshop/handlers/: HealthChecks.java  HealthHandler.java  HelloHandler.java
backend/petshop/src/main/java/com/micifuz/petshop/healthChecks/: Procedures.java
backend/petshop/src/main/java/com/micifuz/petshop/ioc/: IoC.java
backend/petshop/src/main/java/com/micifuz/petshop/router/: Routing.java
backend/petshop/src/test/java/com/micifuz/petshop/: SimpleTest.java
backend/petshop/src/test/java/com/micifuz/test/petshop/: SimpleTest.java
backend/shelters/: BUILD.bazel  pom.xml
backend/shelters/src/main/java/com/gutmox/ioc/: IoC.java
backend/shelters/src/main/java/com/gutmox/router/: Routing.java
backend/shelters/src/main/java/com/micifuz/shelters/: Main.java  MainVerticle.java  SheltersMainVerticle.java
backend/shelters/src/main/java/com/micifuz/shelters/handlers/: HealthChecks.java  HealthHandler.java  HelloHandler.java
backend/shelters/src/main/java/com/micifuz/shelters/healthChecks/: Procedures.java
backend/shelters/src/main/java/com/micifuz/shelters/ioc/: IoC.java
backend/shelters/src/main/java/com/micifuz/shelters/router/: Routing.java
backend/shelters/src/test/java/com/micifuz/: SimpleTest.java
backend/shelters/src/test/java/com/micifuz/shelters/: SimpleTest.java
backend/shelters/src/test/java/com/micifuz/test/shelters/: SimpleTest.java
backend/test-resources/: pom.xml
backend/test-resources/src/main/java/com/micifuz/test/resources/: FreePortLocator.java
backend/test-resources/src/main/java/com/micifuz/test/resources/containers/: Keycloak15TestContainer.java
backend/test-resources/src/main/java/com/micifuz/tests/resources/: FreePortLocator.java
backend/test-resources/src/main/java/com/micifuz/tests/resources/containers/: Keycloak15TestContainer.java  KeycloakTestContainer.java
backend/tests-resources/: BUILD.bazel  pom.xml
backend/vets/: BUILD.bazel  pom.xml
backend/vets/src/main/java/com/gutmox/: MainVerticle.java
backend/vets/src/main/java/com/micifuz/vets/: Main.java  MainVerticle.java  VetsMainVerticle.java
backend/vets/src/main/java/com/micifuz/vets/handlers/: HealthChecks.java  HealthHandler.java  HelloHandler.java
backend/vets/src/main/java/com/micifuz/vets/healthChecks/: Procedures.java
backend/vets/src/main/java/com/micifuz/vets/ioc/: IoC.java
backend/vets/src/main/java/com/micifuz/vets/router/: Routing.java
backend/vets/src/test/java/com/micifuz/test/vets/: SimpleTest.java
backend/vets/src/test/java/com/micifuz/vets/: SimpleTest.java
bazel/: maven.bzl
coverage-report/: pom.xml  prepare.sh
docs/: build.md  continuous-integration.md  instalation.md
src/main/java/com/gutmox/: MainVerticle.java
src/main/java/com/gutmox/router/: Routing.java
