load("@//bazel:deps.bzl", "COMMON_DEPS", "COMMON_TESTS_DEPS")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

java_library(
    name = "deps",
    srcs = glob(["**/src/main/java/**/*.java"]),
    resources = glob(["**/src/main/resources/**"]),
    visibility = ["//visibility:public"],
    deps = COMMON_DEPS
)

java_test(
    name = "tests",
    srcs = glob(["**/src/test/java/**/*.java"]),
    args = ["--select-package=com.micifuz"],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    resources = glob(["**/src/test/resources/**"]),
    use_testrunner = False,
    visibility = ["//visibility:public"],
    deps = COMMON_DEPS + COMMON_TESTS_DEPS + [
        ":deps",
    ],
)
MAIN_VERTICLE = "com.micifuz.authn.AuthMainVerticle"

java_binary(
    name = "service",
    args = [MAIN_VERTICLE],
    main_class = "com.micifuz.commons.Runner",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":deps",
    ],
)

container_image(
    name = "container",
    base = "@java11//image",
    cmd = [
        "java",
        "-jar",
        "service_deploy.jar",
        MAIN_VERTICLE
    ],
    files = [
        ":service_deploy.jar",
    ],
)

