java_library(
    name = "deps",
    srcs = glob(["**/src/main/java/**/*.java"]),
    resources = glob(["**/src/main/resources/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "@vertx//:io_netty_netty_transport",
        "@vertx//:io_reactivex_rxjava2_rxjava",
        "@vertx//:io_vertx_vertx_config",
        "@vertx//:io_vertx_vertx_config_yaml",
        "@vertx//:io_vertx_vertx_core",
        "@vertx//:io_vertx_vertx_health_check",
        "@vertx//:io_vertx_vertx_rx_java2",
        "@vertx//:io_vertx_vertx_web",
        "@vertx//:io_vertx_vertx_web_client",
        "@vertx//:org_apache_commons_commons_lang3",
    ],
)
