java_library(
    name = "all-external-targets",
    srcs = glob(["**/src/main/java/**/*.java"]),
    resources = glob(["**/src/main/resources/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "@maven//:io_vertx_vertx_core",
        "@maven//:io_vertx_vertx_rx_java2",
        "@maven//:io_vertx_vertx_web",
        "@maven//:io_vertx_vertx_web_client",
        "@maven//:io_reactivex_rxjava2_rxjava",
        "@maven//:io_netty_netty_transport",
        "@maven//:javax_xml_soap_javax_xml_soap_api",
        "@maven//:javax_xml_bind_jaxb_api",
        "@maven//:com_sun_xml_messaging_saaj_saaj_impl",
        "@maven//:javax_activation_activation",
        "@maven//:org_glassfish_jaxb_jaxb_runtime",
    ],
)

java_library(
    name = "units-tests-deps",
    srcs = glob(["**/src/test/java/**/*.java"]),
    resources = glob(["**/src/test/resources/**"]),
    visibility = ["//visibility:public"],
    deps = [
        ":all-external-targets",
        "@maven//:io_vertx_vertx_rx_java2",
        "@maven//:io_reactivex_rxjava2_rxjava",
        "@maven//:io_vertx_vertx_core",
        "@maven_test//:org_assertj_assertj_core",
        "@maven_test//:io_vertx_vertx_junit5",
        "@maven_test//:org_junit_jupiter_junit_jupiter_api",
        "@maven_test//:org_junit_jupiter_junit_jupiter_engine",
        "@maven_test//:org_junit_platform_junit_platform_console",
        "@maven_test//:org_mockito_mockito_junit_jupiter",
        "@maven_test//:org_mockito_mockito_core",
        "@maven_test//:org_apache_httpcomponents_httpclient",
    ],
)

java_test(
    name = "tests",
    srcs = glob([
        "*.java",
    ]),
    args = ["--select-package=com.gutmox"],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    use_testrunner = False,
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":units-tests-deps",
    ],
)

java_binary(
    name = "service",
    main_class = "io.vertx.core.Launcher",
    args = ["run com.micifuz.petshop.MainVerticle"],
    deploy_manifest_lines = ["Main-Verticle: com.micifuz.petshop.MainVerticle"],
    visibility = ["//visibility:public"],
    runtime_deps = [":all-external-targets"],
)