load("@//bazel:deps.bzl", "COMMON_DEPS", "COMMON_TESTS_DEPS")

java_library(
    name = "deps",
    srcs = glob(["**/src/main/java/**/*.java"]),
    resources = glob(["**/src/main/resources/**"]),
    visibility = ["//visibility:public"],
    deps = COMMON_DEPS
)

java_test(
    name = "tests",
    srcs = glob(["**/src/test/java/**/*.java"]),
    args = ["--select-package=com.micifuz"],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    resources = glob(["**/src/test/resources/**"]),
    use_testrunner = False,
    visibility = ["//visibility:public"],
    deps = COMMON_DEPS + COMMON_TESTS_DEPS + [
            ":deps",
    ],
)

java_binary(
    name = "service",
    args = ["com.micifuz.shelters.SheltersMainVerticle"],
    main_class = "com.micifuz.commons.Runner",
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":deps",
    ],
)

