java_library(
    name = "deps",
    srcs = glob(["**/src/main/java/**/*.java"]),
    resources = glob(["**/src/main/resources/**"]),
    visibility = ["//visibility:public"],
    deps = [
        "@vertx//:io_vertx_vertx_core",
        "@vertx//:io_vertx_vertx_rx_java2",
        "@vertx//:io_vertx_vertx_web",
        "@vertx//:io_vertx_vertx_web_client",
        "@vertx//:io_reactivex_rxjava2_rxjava",
        "@vertx//:io_netty_netty_transport"
    ],
)

java_library(
    name = "tests-deps",
    srcs = glob(["**/src/test/java/**/*.java"]),
    resources = glob(["**/src/test/resources/**"]),
    visibility = ["//visibility:public"],
    deps = [
        ":deps",
        "@vertx//:io_vertx_vertx_rx_java2",
        "@vertx//:io_reactivex_rxjava2_rxjava",
        "@vertx//:io_vertx_vertx_core",
        "@vertx_test//:org_assertj_assertj_core",
        "@vertx_test//:io_vertx_vertx_junit5",
        "@vertx_test//:org_junit_jupiter_junit_jupiter_api",
        "@vertx_test//:org_junit_jupiter_junit_jupiter_engine",
        "@vertx_test//:org_junit_platform_junit_platform_console",
        "@vertx_test//:org_apache_httpcomponents_httpclient",
        "@mockito//:org_mockito_mockito_junit_jupiter",
        "@mockito//:org_mockito_mockito_core",
    ],
)

java_test(
    name = "tests",
    srcs = glob([
        "*.java",
    ]),
    args = ["--select-package=com.gutmox"],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    use_testrunner = False,
    visibility = ["//visibility:public"],
    runtime_deps = [
        ":tests-deps",
    ],
)

java_binary(
    name = "service",
    main_class = "io.vertx.core.Launcher",
    args = ["run com.micifuz.vets.MainVerticle"],
    deploy_manifest_lines = ["Main-Verticle: com.micifuz.vets.MainVerticle"],
    visibility = ["//visibility:public"],
    runtime_deps = [":deps"],
)